<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".inputdatalaporan.inputdatalaporan"
    tools:showIn="@layout/inputdatalaporan_activity"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/hasil"
        android:text="HASIL SCAN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20dp"/>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/inputdata_id"
                android:inputType="none"
                android:layout_marginBottom="20dp"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/inputdata_nama_counter"
                android:inputType="textPersonName"
                android:layout_marginBottom="20dp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/inputdata_pemilik"
                android:inputType="textPersonName"
                android:layout_marginBottom="20dp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/inputdata_alamat"
                android:inputType="textPersonName"
                android:layout_marginBottom="20dp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/inputdata_no_hp"
                android:inputType="textPersonName"
                android:layout_marginBottom="20dp"/>
        </android.support.design.widget.TextInputLayout>
        
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Input"
            android:textColor="@color/colorPrimary"/>




    </LinearLayout>



</LinearLayout>